Fix EuiBadge truncation (esp in IE)
by removing`box-sizing: content-box` which removes the need for calc’d max-widths and fix the flex on teh child button

--- a/src/components/badge/_badge.scss
+++ b/src/components/badge/_badge.scss
@@ -5,17 +5,15 @@
   font-size: $euiFontSizeXS;
   font-weight: $euiFontWeightMedium;
   line-height: $euiSize + 2px; /* 1 */
+  padding: 0 $euiSizeS;
   display: inline-block;
   text-decoration: none;
-  box-sizing: content-box;
   border-radius: $euiBorderRadius / 2;
   border: solid 1px transparent;
-  padding: 0 $euiSizeS;
   background-color: transparent;
   white-space: nowrap;
   vertical-align: middle;
-  overflow: hidden;
-  max-width: calc(100% - #{($euiSizeS * 2) + 2px}); // Padding plus border
+  max-width: 100%;
   // The badge will only ever be as wide as it's content
   // So, make the text left aligned to ensure all badges line up the same
   text-align: left;
@@ -26,7 +24,6 @@
 
   + .euiBadge {
     margin-left: $euiSizeXS;
-    max-width: calc(100% - #{($euiSizeS * 2) + 2px + $euiSizeXS}); // Padding plus border plus margin
   }
 
   .euiBadge__content {
@@ -37,8 +34,8 @@
 
   .euiBadge__childButton {
     @include euiTextTruncate;
-    max-width: calc(100% - #{$euiSizeM + $euiSizeXS}); // Subtract the icon and icon's margin
-    flex: 0 0 auto;
+    flex: 1 1 auto; // Must be 1 and 1 for IE to properly truncate
+    text-align: inherit;
     font-weight: inherit;
     line-height: inherit;
 
